--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
-*{
-    margin: 0;
-    padding: 0;
+body{
+    background-color: #746a6a;
+}
+.content{ 
+    color: rgb(240, 229, 229);
+    background:url(./images/cit.jpg) ;
+    border: 2px solid black;
+    max-width: 50%;
+    margin: auto;
+  height:50vh;
+}
+.content h1,h2{
+    text-align: center;
+    margin-top: 4rem;
+    font-size: 3.5rem;
+}
+
+.button{
+    padding: 10px 30px 10px 30px;
+    border-radius: 15px;
+    /* text-align: center; */
+    background-color: #7b2d2d;
+    color: white ;
+    font-size: 25px;
+    display: block;
+    margin: auto;
+
 }
